@@startuml

skin rose

class "Customer"{
    -id: int
    -name: String
    -email: String
    -phone: String
    -address: String
    -city: String
    -state: String
    -zip: String
    -country: String
    -created_at: Date
    -updated_at: Date
}

class "Order"{
    -id: int
    -customer_id: int
    -order_list: List[Comic Book]
    -total: float
    -created_at: Date
    -updated_at: Date
}

class "ComicBook"{
    -id: int
    -title: String
    -issue: int
    -publisher: String
    -price: float
    -created_at: Date
    -updated_at: Date
}

Customer "1" --> "1..*" Order : makes an

Order "1" --> "1..*" ComicBook : contains

Customer "1" --> "1..*" ComicBook : buys
@@enduml